--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+<DOCTYPE html>
+<html>
+  <head>
+<title>MY WEBSITE</title> 
+</head>
+<body>
+    <h1>my website</h1>
+    
+  </body>
+  </html>
