--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 </head>
 <body>
     <h1>my website</h1>
+  
+  <head><font size ="12"><i><b><u>MY CGPA IN SEMESTER EXAMINATION</u></b></i></font></head>
+    
+    <h1><u><font size="10">FIRST SEM RESULT</font></u><h1/>
+  <img src="IMG1.jpg" width="800" height="1000" >
+  <h2><u><font size="10">SECOND SEM RESULT</font></u><h2/>
+  <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091909.jpg" width="800" height="1000">
+  <h3><u><font size="10">THIRD SEM RESULT</font></u><h3/>
+  <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091853.jpg" width="800" height="1000">
+  <h4><u><font size="10">FOURTH SEM RESULT</font></u><h4/>
+  <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091835.jpg" width="800" height="1000">
     
   </body>
   </html>
