--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h2><u><font size="10">SECOND SEM RESULT</font></u><h2/>
   <img src=IMG2.jpg" width="800" height="1000">
   <h3><u><font size="10">THIRD SEM RESULT</font></u><h3/>
-  <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091853.jpg" width="800" height="1000">
+  <img src="IMG3.jpg" width="800" height="1000">
   <h4><u><font size="10">FOURTH SEM RESULT</font></u><h4/>
   <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091835.jpg" width="800" height="1000">
     
