--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h3><u><font size="10">THIRD SEM RESULT</font></u><h3/>
   <img src="IMG3.jpg" width="800" height="1000">
   <h4><u><font size="10">FOURTH SEM RESULT</font></u><h4/>
-  <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250630_091835.jpg" width="800" height="1000">
+  <img src="IMG4.jpg" width="800" height="1000">
     
   </body>
   </html>
