--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 <title>MY WEBSITE</title> 
 </head>
-<body>
+<body align="center">
     <h1>my website</h1>
   
   <head><font size ="12"><i><b><u>MY CGPA IN SEMESTER EXAMINATION</u></b></i></font></head>
