--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1><u><font size="10">FIRST SEM RESULT</font></u><h1/>
   <img src="IMG1.jpg" width="800" height="1000" >
   <h2><u><font size="10">SECOND SEM RESULT</font></u><h2/>
-  <img src=IMG2.jpg" width="800" height="1000">
+  <img src="IMG2.jpg" width="800" height="1000">
   <h3><u><font size="10">THIRD SEM RESULT</font></u><h3/>
   <img src="IMG3.jpg" width="800" height="1000">
   <h4><u><font size="10">FOURTH SEM RESULT</font></u><h4/>
