--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body align="center">
     <h1>my website</h1>
   
-  <head><font size ="12"><i><b><u>MY CGPA IN SEMESTER EXAMINATION</u></b></i></font></head>
+  <head><font size ="12"><i><b><u>MY CGPA IN SEMESTER WISELY</u></b></i></font></head>
     
     <h1><u><font size="10">FIRST SEM RESULT</font></u><h1/>
   <img src="IMG1.jpg" width="800" height="1000" >
